<!--
SPDX-FileCopyrightText: 2024 Daniel Getz <dan@getzit.net>

SPDX-License-Identifier: GPL-3.0-or-later
-->

<resources>
    <string name="app_name">Repti</string>
    <string name="title_activity_main">Repti</string>
    <string name="path_dataset_file">data.json</string>
    <string name="cmd_mark_task_done">Mark task done</string>
    <string name="cmd_create_new_task">Create new task</string>
    <string name="lbl_name">Name</string>
    <string name="cmd_cancel">Cancel</string>
    <string name="cmd_create">Create</string>
    <string name="lbl_not_done">not done</string>
    <string name="cmd_done">Done</string>
    <string name="cmd_done_today">Done today</string>
    <string name="cmd_done_next_day">Done next day</string>
    <string name="cmd_done_previous_day">Done previous day</string>
    <string name="cmd_clear">Clear</string>
    <string name="cmd_clear_day_done">Clear day done</string>
    <string name="lbl_today">today</string>
    <string name="lbl_yesterday">yesterday</string>
    <string name="lbl_days_ago">%1$s days ago</string>
    <string name="lbl_more_information_for_task">more information for task</string>
    <string name="cmd_close">Close</string>
    <string name="cmd_delete">Delete</string>
    <string name="cmd_edit_task">Edit task</string>
    <string name="cmd_save">Save</string>
    <string name="qst_delete">Delete this task permanently?</string>
    <string name="dsc_delete">This will delete the task from your list of tasks. It cannot be undone.</string>
    <string name="lbl_done">Done</string>
    <string name="cmd_menu">Menu</string>
    <string name="lbl_menu">Menu</string>
    <string name="cmd_save_backup">Save backup</string>
    <string name="default_backup_filename">repti.bak</string>
    <string name="msg_backup_saved">Backup saved</string>
    <string name="msg_backup_loaded">Backup loaded</string>
    <string name="msg_backup_save_error">Error saving backup</string>
    <string name="cmd_load_backup">Load backup</string>
    <string name="msg_backup_load_error">Error loading backup</string>
    <string name="msg_backup_load_method_q">How do you want to load the backup?</string>
    <string name="cmd_synchronize">Synchronize</string>
    <string name="cmd_replace">Replace</string>
    <string name="msg_backup_explain_replace">This will discard your current data and replace it with the contents of the backup.</string>
    <string name="msg_backup_explain_synchronize">This will synchronize your current data with the backup, taking the most recent updates of each. The backup file will not be changed.</string>
    <string name="msg_warn_no_undo_plural">These cannot be undone.</string>
    <string name="msg_warning">Warning</string>
    <string name="cmd_show_about">About Repti</string>
    <string name="title_about">About Repti</string>
    <string name="cmd_back">Back</string>
    <string name="cmd_drag">Drag position</string>
    <string name="lbl_version">Version</string>
    <string name="msg_copyright_notice">Copyright © 2024 Daniel Getz</string>
    <string name="msg_about_licenses">Licensed under the GPL v3, and includes the following libraries with licenses as noted:</string>
    <string name="ttl_new_task">New task dialog</string>
    <string name="ttl_load_backup">Load backup dialog</string>
    <string name="ttl_edit_task">Edit task dialog</string>
    <string name="ttl_edit_day">Edit day dialog</string>
    <string name="ttl_delete_task">Delete task dialog</string>
</resources>